start/stop method for AudioBufferSourceNodes and OscillatorNodes can take no args https://bugs.webkit.org/show_bug.cgi?id=138739

Patch inspired by the following Blink revision by <rtoy@google.com>:
<https://src.chromium.org/viewvc/blink?view=rev&revision=160845>